--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-pyshark==0.6.1
-python-magic==0.4.27
-cryptography==42.0.5
-geoip2==4.8.0
-whois==0.9.21
+pyshark==0.6.0
+matplotlib==3.9.2
 numpy==1.26.4
-beautifulsoup4==4.12.3
-ipaddress==1.0.23
-matplotlib==3.8.3
-seaborn==0.13.2
-tqdm==4.66.2
-colorama==0.4.6
+networkx==3.3
+python-magic==0.4.27
+cryptography==43.0.1
+geoip2==4.8.0
+python-whois==0.9.4
+tld==0.13
